--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,13 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
+  --ancho-pantalla: 45vw;
+
+  --dark-color-rgb: #6B167E;
+  /* --dark-color-rgb: #82469C; */
+  --ligth-color-rgb: #F7CFF7;
+  --palido: #FEFBFE;
+
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
     #16abff33 0deg,
@@ -66,7 +73,8 @@
       #ffffff80
     );
 
-    --callout-rgb: 20, 20, 20;
+    /* --callout-rgb: 20, 20, 20; */
+    --callout-rgb: #F7CFF7;
     --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
@@ -83,6 +91,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  scroll-behavior:smooth
+
 }
 
 body {
