--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,21 +3,21 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  background-color: var(--palido);
+  /* height: 100%; */
+  /* padding: 6rem; */
+  /* min-height: 100vh; */
 }
+
 
 .description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  width: 80%;
+  /* font-family: var(--font-mono); */
 }
-
+/* 
 .description a {
   display: flex;
   justify-content: center;
@@ -106,7 +106,7 @@
 
 .logo {
   position: relative;
-}
+} */
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
