--- a/src/Components/Introduction/style.module.css
+++ b/src/Components/Introduction/style.module.css
@@ -1,23 +1,22 @@
 .intro{
     display: flex;
+    flex-direction: column;
     width: 100%;
     margin-top: 50px;
-    /* height: auto; */
-    height: var(--ancho-pantalla);
-    /* background: url('inicio1.jpg'); */
+    /* height: var(--ancho-pantalla); */
+    height: 100vh;
     background: url('inicio3.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 50px 0;
+    padding: 30px 0;
 }
 
 .title{
     display: block;
-    margin: 40px;
+    margin-left: 30px;
     color: white;
-    position: relative;
-    top: -100px;
+    width: 48%;
 }
 
 .title h1{
@@ -34,25 +33,108 @@
 }
 
 .image{
-    margin: 0px 50px ;
-    position: relative;
-    bottom: -200px;
-    border-radius: 30px;
-    transform: skewX(-5deg);
-    /* padding: 10px 10px; */
-    /* box-shadow: 10px 10px 20px rgba(0,0,0,0.25); */
+    text-align: right;
+    /* border-radius: 30px; */
+
 }
 
-/* .image{
-    margin: 170px 90px 20px 70px;
-    border-radius: 30px;
-    transform: skewX(-5deg);
-    padding: 10px 10px;
-    box-shadow: 10px 10px 20px rgba(0,0,0,0.25);
-} */
+.img{
+    position: relative;
+    bottom: -20%;
+}
 
-/* .img{
-    border-radius: 20px;
-    box-shadow: 10px 10px 10px rgb(0, 0, 0);
-} */
 
+@media (max-width: 1025px) and (min-width: 768px){
+
+    .title{
+        width: 80%;
+        margin: 50px 20px;
+    }
+
+    .title h1{
+        font-size: 70px;
+
+    }
+    .title h3{
+        font-size: 40px;
+
+    }
+
+    .image{
+        width: 80%;
+        height: auto;
+        margin: 50px 0px;
+    }
+    .img{
+        width: 120%;
+        height: auto;
+    }
+  
+}
+
+@media (max-width: 500px){
+
+
+    .title{
+        width: 90%;
+        margin: 20px;
+        color: white;
+        position: inherit;
+    }
+
+    .title h1{
+        font-size: 40px;
+    }
+
+    .title h3{
+        font-size: 25px;
+    }
+    
+    .image{
+        margin: 50px 0 10px 0;
+    }
+
+    .img{
+        width: 100%;
+        height: auto;
+    }
+ 
+    
+}
+
+/* @media (min-width: 391px) and(max-width: 420px){
+    .intro{
+
+        height: 100%;
+        padding: 40px 0;
+    }
+
+    .title{
+        display: block;
+        margin: 20px;
+        color: white;
+        position: inherit;
+        width: 100%;
+    }
+
+    .title h1{
+        font-size: 50px;
+    }
+
+    .title h3{
+        font-size: 30px;
+        
+    }
+
+    .img{
+        width: 100%;
+        position: relative;
+        bottom: 150px;
+        margin: 20px 10px;
+        height: auto;
+    }
+
+    .image{
+        margin: auto ;
+    }
+} */
