--- a/src/Components/Navbar/style.module.css
+++ b/src/Components/Navbar/style.module.css
@@ -6,7 +6,6 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-    /* border-bottom: solid 1px black; */
   box-shadow: 0px 0px 10px grey;
   position: fixed;
   z-index: 2;
@@ -41,4 +40,63 @@
   
 .image{
   margin: 0 40px;
+}
+
+
+@media(max-width: 780px) and (min-width:550px){
+  .navbar {
+    flex-direction: column;
+  }
+
+}
+
+@media(max-width: 549px) and (min-width:450px){
+  .navbar {
+    flex-direction: column;
+  }
+
+  .navbar ul{
+    margin: 10px;
+  }
+
+  .navbar a{
+    font-size: 20px;
+  }
+
+}
+
+@media(max-width: 449px) and (min-width: 350px){
+  .navbar {
+    flex-direction: column;
+  }
+
+  .navbar ul{
+    margin: 10px;
+  }
+
+  .navbar li{
+    margin: 0 10px;
+  }
+
+  .navbar a{
+    font-size: 20px;
+  }
+}
+
+@media(max-width: 449px){
+  .navbar {
+    flex-direction: column;
+  }
+
+  .navbar ul{
+    margin: 10px;
+  }
+
+  .navbar li{
+    margin: 0 5px;
+  }
+
+  .navbar a{
+    font-size: 15px;
+  }
 }
