--- a/src/Components/Contact/style.module.css
+++ b/src/Components/Contact/style.module.css
@@ -12,6 +12,7 @@
     margin: 10px 0;
     border-radius: 20px;
 }
+
 .contactUs{
     background-color: var(--dark-color-rgb);
     border-radius: 20px;
@@ -70,4 +71,37 @@
     border-style: none;
     color: white;
     border-radius: 10px;
+}
+
+@media(max-width: 1024px) and (min-width: 601px){
+    .form input{
+        width: 85%;
+       
+    }
+    .form textarea{
+        width: 85%;
+    }
+    
+}
+
+@media(max-width: 600px){
+    .contact{
+        flex-direction: column;
+    }
+
+    .contactUs{
+        width: 100%;
+    }
+
+    .form{
+        width: 100%;
+    }
+
+    .form input{
+        width: 80%;
+    }
+
+    .form textarea{
+        width: 80%;
+    }
 }
