--- a/src/Components/About/style.module.css
+++ b/src/Components/About/style.module.css
@@ -74,8 +74,9 @@
     width: 100%;
     height: 45px;
     line-height: 45px;
-    color: #fff;
+    /* color: #fff; */
     text-align: center;
+    color: var(--dark-color-rgb)
 }
 
 .card .back {
