--- a/src/Components/Introduction/style.module.css
+++ b/src/Components/Introduction/style.module.css
@@ -10,6 +10,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     padding: 30px 0;
+    font-family:  var(--font-mono);
+
 }
 
 .title{
