--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,11 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
+  /* --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace; */
+
+    --font-mono: 'Albert Sans', sans-serif;;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -91,8 +93,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  scroll-behavior:smooth
-
+  scroll-behavior:smooth;
+ 
 }
 
 body {
@@ -103,6 +105,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
 }
 
 a {
