--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -16,6 +16,8 @@
   flex-direction: column;
   width: 80%;
   /* font-family: var(--font-mono); */
+  font-family:  var(--font-mono);
+/* font-family: 'Exo 2', sans-serif; */
 }
 /* 
 .description a {
