--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,8 +13,8 @@
 
   --ancho-pantalla: 45vw;
 
-  --dark-color-rgb: #6B167E;
-  /* --dark-color-rgb: #82469C; */
+  /* --dark-color-rgb: #6B167E; */
+  --dark-color-rgb: #82469C;
   --ligth-color-rgb: #F7CFF7;
   --palido: #FEFBFE;
 
