--- a/src/Components/Introduction/style.module.css
+++ b/src/Components/Introduction/style.module.css
@@ -1,16 +1,16 @@
 .intro{
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     width: 100%;
     margin-top: 50px;
     /* height: var(--ancho-pantalla); */
-    height: 100vh;
-    background: url('inicio3.jpg');
+    height: 95vh;
+    background: url('introduction1.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     padding: 30px 0;
-      font-family:  var(--font-mono);
+    font-family:  var(--font-mono);
 
 }
 
@@ -24,29 +24,34 @@
 .title h1{
     font-size: 60px;
     margin: 40px 0px 20px 0px;
-    text-shadow: 5px 5px 10px black;
+    /* text-shadow: 5px 5px 10px black; */
 }
 
 .title h3{
     font-size: 30px;
-    text-shadow: 2px 2px 5px black;
+    /* text-shadow: 2px 2px 5px black; */
     color: white;
 
 }
 
 .image{
-    text-align: right;
-    /* border-radius: 30px; */
-
+    /* text-align: right; */
+    width: 52%;
+    margin-top: 170px;
+    /* margin-right: 40px; */
 }
 
 /* .img{
-    position: relative;
-    bottom: -15%;
+    margin-right: 50px;
+    margin-bottom: 50px;
 } */
 
 
 @media (max-width: 1025px) and (min-width: 768px){
+
+    .intro{
+        flex-direction: column;
+    }
 
     .title{
         width: 80%;
@@ -76,6 +81,11 @@
 
 @media (max-width: 500px){
 
+    .intro{
+        flex-direction: column;
+        height: 90vh;
+
+    }
 
     .title{
         width: 90%;
@@ -93,7 +103,9 @@
     }
     
     .image{
-        margin: 50px 0 10px 0;
+        margin: auto;
+        width: 90%;
+        text-align: center;
     }
 
     .img{
