--- a/src/Components/About/style.module.css
+++ b/src/Components/About/style.module.css
@@ -1,7 +1,6 @@
 .about{
     display: block;
-    /* margin: 50px 0px; */
-    padding: 70px 0px 30px 0px;
+    padding: 70px 0px 0px 0px;
     text-align: left;
     height: 100%;
     width: 100%;
@@ -9,6 +8,7 @@
 
 .title{
     /* font-size: 40px; */
+    margin: 10px 0;
     color: var(--dark-color-rgb);
 }
 
