--- a/src/Components/Footer/style.module.css
+++ b/src/Components/Footer/style.module.css
@@ -1,13 +1,12 @@
 .footer{
     width: 100%;
-    height: 120px;
+    /* height: 120px; */
     background-color: var(--dark-color-rgb);
 }
 
 .container{
     display: flex;
     height: 70%;
-    /* margin: auto; */
 }
 
 .container section{
@@ -25,9 +24,16 @@
 }
 
 .navbarIcon{
-    font-size: 30px;
-    margin: 30px;
-    color: white
+    font-size: 25px;
+    margin: 0px 10px;
+    color: rgb(236, 236, 236);
+    position: relative;
+    top: 5px;
+}
+
+.link{
+    color: rgb(236, 236, 236);
+    font-size: 15px;
 }
 
 .bottom{
@@ -39,6 +45,21 @@
     color: white;
     bottom: 0;
 }
+
 .bottom p{
     margin: 10px 0;
+}
+
+@media(max-width: 600px){
+
+    .container{
+        flex-direction: column;
+    }
+    .image{
+        margin: 30px auto;
+    }
+
+    .bottom p{
+        text-align: center;
+    }
 }
