--- a/src/Components/About/style.module.css
+++ b/src/Components/About/style.module.css
@@ -2,8 +2,9 @@
     display: block;
     padding: 70px 0px 0px 0px;
     text-align: left;
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
+    height: 150vh;
 }
 
 .title{
@@ -13,8 +14,8 @@
 }
 
 .description{
-    margin: 30px auto;
-    font-size: 25px;
+    margin: 20px auto;
+    font-size: 23px;
     color: black;
 }
 
@@ -29,8 +30,8 @@
 .card{
     width: 480px;
     /* width: 50%; */
-    margin:20px 0px;
-    margin-bottom: 30px;
+    margin: 20px 0px 50px 0px;
+    /* margin-bottom: 30px; */
     height: 290px;
     position: relative;
     border-radius: 30px;
@@ -45,7 +46,6 @@
     border-radius: 20px;
     overflow: hidden;
     transition: 1s;
-    /* background-color: var(--dark-color-rgb); */
     box-shadow: 3px 3px 10px;
     border-radius: 35px;
     border: solid 3px #82469C;
@@ -61,7 +61,7 @@
 }
 
 .front{
-    transform: perspective(600px) rotateY(0deg);
+    transform: perspective(600px) rotateX(0deg);
     box-shadow: 5 5px 10px;
 }
 
@@ -76,10 +76,11 @@
     width: 100%;
     text-align: center;
     color: var(--dark-color-rgb);
+    padding-bottom: 20px;
 }
 
 .card .back {
-    transform: perspective(600px) rotateY(180deg);
+    transform: perspective(600px) rotateX(180deg);
     background-color: var(--dark-color-rgb);
     /* background-color: #82469C; */
     padding: 15px;
@@ -93,19 +94,17 @@
 
 }
 
-
-
 .card .back p {
     letter-spacing: 1px;
     align-items: bottom;
 } 
 
 .card:hover .front {
-    transform: perspective(600px) rotateY(180deg);
+    transform: perspective(600px) rotateX(180deg);
 }
 
 .card:hover .back {
-    transform: perspective(600px) rotateY(360deg);
+    transform: perspective(600px) rotateX(360deg);
 }
 
 @media(max-width: 989px) and (min-width: 768px){
