--- a/src/Components/Contact/style.module.css
+++ b/src/Components/Contact/style.module.css
@@ -1,6 +1,7 @@
 .container{
     display: block;
     padding: 70px 0px 0px 0px;
+    
 }
 .title{
     margin: 10px 0;
@@ -61,6 +62,7 @@
     width: 95%;
     padding: 5px;
     border-radius: 2px;
+    font-family:  var(--font-mono);
     margin: auto;
 }
 
