--- a/src/Components/About/style.module.css
+++ b/src/Components/About/style.module.css
@@ -2,9 +2,8 @@
     display: block;
     padding: 70px 0px 0px 0px;
     text-align: left;
-    /* height: 100%; */
+    height: 100%;
     width: 100%;
-    height: 150vh;
 }
 
 .title{
