--- a/src/Components/Portfolio/style.module.css
+++ b/src/Components/Portfolio/style.module.css
@@ -4,7 +4,7 @@
     /* margin: 50px 0; */
     padding: 70px 0px;
     color: black;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .title{
@@ -18,15 +18,14 @@ text-align: center;
 
 
 /* .frame{
-  width: 100%;
-  height: 100%;
+  height: 300%;
 } */
 
-@media(max-width: 1040px)and (min-width: 900px){
+@media(max-width: 1279px) and (min-width: 900px){
 
     .frame{
       width: 90%;
-      height: 390px;
+      height: 360px
     }
 }
 @media(max-width: 899px)and (min-width: 700px){
@@ -45,9 +44,9 @@ text-align: center;
     }
 }
 
-/* @media(min-height: 1000px){
+@media(min-height: 1040px){
 
   .frame{
     height: 500px;
   }
-} */
+}
