--- a/src/Components/About/style.module.css
+++ b/src/Components/About/style.module.css
@@ -133,10 +133,10 @@
        
     }
 }
-@media (max-width: 1030px){
+@media (min-width: 1030px){
     .card{
         width: 40%;
-        height: 40%;
+        height: 50%;
     }
 }
 /* @media (max-height:900px) and (min-height:800px){
