--- a/src/Components/About/style.module.css
+++ b/src/Components/About/style.module.css
@@ -117,15 +117,25 @@
     }
 }
 
-/* (max-width: 1030px) and */
 
-@media (min-width: 990px){
+
+@media (max-width: 1030px) and (min-width: 990px){
 
 .card{
     width: 370px;
     height: 250px;
 }
   
+}
+
+@media (min-width: 1281px){
+    .card{
+        width: 370px;
+        height: 250px;
+        margin: 20px 20px 50px 20px;
+
+        /* margin: ; */
+    }
 }
 
 @media (max-width: 500px){
