--- a/src/Components/Introduction/style.module.css
+++ b/src/Components/Introduction/style.module.css
@@ -134,11 +134,11 @@
     
     .image{
         width: 100%;
-        margin-top: 170px;
+        /* margin-top: 170px; */
+        text-align: right;
     }
     .img{
-        width: 60%;
-        text-align: right;
+        width: 50%;
     }
 }
 
