--- a/src/Components/Introduction/style.module.css
+++ b/src/Components/Introduction/style.module.css
@@ -117,7 +117,7 @@
 
 @media (min-width: 1300px){
     .intro{
-        flex-direction: column;
+        /* flex-direction: column; */
         height: 95vh;
     }
 
@@ -133,13 +133,13 @@
     }
     
     .image{
-        width: 100%;
-        /* margin-top: 170px; */
-        text-align: right;
+        /* width: 100%; */
+        margin-top: 170px;
+        /* text-align: right; */
     }
-    .img{
+    /* .img{
         width: 50%;
-    }
+    } */
 }
 
 /* @media (min-width: 391px) and(max-width: 420px){
