--- a/src/Components/Introduction/style.module.css
+++ b/src/Components/Introduction/style.module.css
@@ -72,7 +72,7 @@
         margin: 50px 0px;
     }
     .img{
-        width: 120%;
+        width: 100%;
         height: auto;
     }
   
@@ -133,13 +133,13 @@
     }
     
     .image{
-        /* width: 100%; */
-        margin-top: 170px;
+        width: 60%;
+        margin-top: 250px;
         /* text-align: right; */
     }
-    /* .img{
-        width: 50%;
-    } */
+    .img{
+        width: 100%;
+    }
 }
 
 /* @media (min-width: 391px) and(max-width: 420px){
