--- a/src/Components/About/style.module.css
+++ b/src/Components/About/style.module.css
@@ -25,13 +25,11 @@
     justify-content: space-around;
 }
 
-
 .card{
     width: 480px;
     /* width: 50%; */
     margin: 20px 0px 50px 0px;
-    /* margin-bottom: 30px; */
-    height: 290px;
+    height: 280px;
     position: relative;
     border-radius: 30px;
 }
@@ -113,10 +111,8 @@
     .card{
         width: 500px;
         height: 300px;
-
     }
 }
-
 
 
 @media (max-width: 1030px) and (min-width: 990px){
@@ -128,13 +124,12 @@
   
 }
 
-@media (min-width: 1281px){
+@media (min-width: 1281px) and (max-width:1450px){
     .card{
-        width: 370px;
-        height: 250px;
-        margin: 20px 20px 50px 20px;
-
-        /* margin: ; */
+        min-width: 370px;
+        max-width: 500px;
+        min-height: 300px;
+        margin: 30px 10px 80px 10px;
     }
 }
 
