--- a/src/Components/Contact/style.module.css
+++ b/src/Components/Contact/style.module.css
@@ -122,6 +122,7 @@
 @media(min-width: 1281px){
 
     .container{
-      height: 550px;
+      max-height: 550px;
+      min-height: 520px;
     }
   }
