--- a/src/Components/Introduction/style.module.css
+++ b/src/Components/Introduction/style.module.css
@@ -115,7 +115,13 @@
     
 }
 
-@media (min-width: 1300px){
+/* @media (min-width: 1350px){
+    .img{
+        width: 60%;
+    }
+} */
+
+@media (min-width: 1281) and (max-width:1450px){
     .intro{
         /* flex-direction: column; */
         height: 95vh;
@@ -133,13 +139,14 @@
     }
     
     .image{
-        width: 60%;
-        margin-top: 250px;
-        /* text-align: right; */
+        width: 55%;
+        margin-top: 200px;
+        text-align: center;
     }
     .img{
-        width: 90%;
-        min-height: 400px;
+        width: 80%;
+        /* min-height: 300px;
+        max-height: 600px; */
     }
 }
 
