--- a/src/Components/Portfolio/style.module.css
+++ b/src/Components/Portfolio/style.module.css
@@ -47,6 +47,7 @@ text-align: center;
 @media(min-width: 1281px){
 
   .frame{
-    height: 600px;
+    max-height: 600px;
+    min-height: 450px;
   }
 }
