--- a/src/Components/Introduction/style.module.css
+++ b/src/Components/Introduction/style.module.css
@@ -2,9 +2,9 @@
     display: flex;
     /* flex-direction: column; */
     width: 100%;
-    margin-top: 50px;
+    /* padding-top: 50px; */
     /* height: var(--ancho-pantalla); */
-    height: 95vh;
+    height: 100vh;
     background: url('introduction1.png');
     background-position: center;
     background-size: cover;
@@ -17,6 +17,7 @@
 .title{
     display: block;
     margin-left: 30px;
+    padding-top: 50px;
     color: white;
     width: 48%;
 }
@@ -24,26 +25,52 @@
 .title h1{
     font-size: 60px;
     margin: 40px 0px 20px 0px;
-    /* text-shadow: 5px 5px 10px black; */
+    animation: showIn  1s ease-in forwards;
 }
 
 .title h3{
     font-size: 30px;
     /* text-shadow: 2px 2px 5px black; */
     color: white;
+    animation: showIn  1s ease-in forwards;
+    /* animation: fadeIn 1.2s ease-out; */
 
 }
 
 .image{
     width: 52%;
     margin-top: 170px;
+    animation: fadeIn 1.2s ease-out;
 }
 
 /* .img{
-    margin-right: 50px;
-    margin-bottom: 50px;
+    
 } */
 
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes showIn {
+    0% {
+      opacity: 0;
+      /* transform: translateY(-200px); */
+    }
+    50%{
+      opacity: 0.3;
+    }
+    100% {
+      opacity: 1;
+      /* transform: translateY(0); */
+    }
+  }
 
 @media (max-width: 1025px) and (min-width: 768px){
 
@@ -114,6 +141,8 @@
  
     
 }
+
+
 
 /* @media (min-width: 1350px){
     .img{
