--- a/src/Components/Navbar/style.module.css
+++ b/src/Components/Navbar/style.module.css
@@ -10,7 +10,22 @@
   position: fixed;
   z-index: 2;
   font-family:  var(--font-mono);
+  animation: fadeIn 1.2s ease-out;
 
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    /* transform: translateY(-200px); */
+  }
+  50%{
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    /* transform: translateY(0); */
+  }
 }
   
 .navbar ul {
@@ -18,7 +33,6 @@
   margin: 0;
   padding: 0;
   align-items: center;
-
 }
   
 .navbar li {
@@ -46,6 +60,7 @@
   
 .image{
   margin: 0 40px;
+  animation: fadeIn 1.2s ease-out;
   
 }
 
