--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,3 +113,15 @@ a {
   text-decoration: none;
 }
 
+.ocultar{
+  transform: translateY(100px);
+  opacity:  0;
+  transition: all 0.6s ease-out;
+}
+
+.mostrar{
+  /* transform: scale(1); */
+  transform: translateY(0);
+  opacity:  1;
+  transition: all 0.6s ease-out;
+}
