--- a/src/Components/About/style.module.css
+++ b/src/Components/About/style.module.css
@@ -136,8 +136,15 @@
 @media (max-width: 500px){
     .card{
         width: 340px;
-        height: 200px;
-       
+        height: 200;
+    }
+
+    .description{
+        font-size: 12px;
+
+    }
+    .face p{
+        font-size: 18px;
     }
 }
 /* @media (min-width: 1030px){
