--- a/src/Components/About/style.module.css
+++ b/src/Components/About/style.module.css
@@ -136,7 +136,7 @@
 @media (max-width: 500px){
     .card{
         width: 340px;
-        height: 200;
+        height: 200px;
     }
 
     .description{
